Footer qucik fix - break copyright ine on smaller devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -503,3 +503,9 @@ Media quieries
         text-align: center;
     }
 }
+
+@media (min-width: 325px){
+    .copyright-break {
+        display: none !important;
+    }
+}
